Tried fixing alignment issues in CSS. No good.

--- a/assets/assets.css
+++ b/assets/assets.css
@@ -63,9 +63,11 @@ div {
 
 section form p {
   margin: 5px;
-  /* display: flexbox;
-  flex-direction: column; */
   align-items: center;
+}
+
+label {
+  width: 80px;
 }
 
 .input {
